log
Sun, May 18, 2025 12:06:16 AM: 
 sudoku.c | 104 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 102 insertions(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:156:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
3f0e54c
Sun, May 18, 2025 12:08:32 AM: 
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:156:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
5a85d54
Sun, May 18, 2025 12:09:42 AM: 
 sudoku.c | 72 +++++++++++++++++++++-------------------------------------------
 1 file changed, 23 insertions(+), 49 deletions(-)
 tests:  6|2
total_score: 45/70
209c2f9
Sun, May 18, 2025 12:12:42 AM: 
 sudoku.c | 47 ++++++++++++++++++++++-------------------------
 1 file changed, 22 insertions(+), 25 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:130:13: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
         if (is_final(current)) {
             ^~~~~~~~
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
4eff8b5
